@@ -38,10 +38,14 @@
 #endif
 
 #define DRIVER_PORT_NUM 256
+
+#ifndef PORT_NUM_FOR_CLIENT
 #define PORT_NUM_FOR_CLIENT 512
+#endif
+
 #define FIRST_AVAILABLE_PORT 1
 
-#define CONNECTION_NUM_FOR_PORT 256
+#define CONNECTION_NUM_FOR_PORT PORT_NUM_FOR_CLIENT
 
 #ifndef CLIENT_NUM
 #define CLIENT_NUM 64
